Striver A2Z: Binary Trees - 9

--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -2026,6 +2026,7 @@
      "iopub.status.idle": "2024-04-10T11:14:38.577385Z",
      "shell.execute_reply": "2024-04-10T11:14:38.576659Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.0211,
      "end_time": "2024-04-10T11:14:38.579194",
@@ -2056,6 +2057,66 @@
     "\n",
     "# Testing the solution\n",
     "assert averageOfLevels(BinaryTreeNode.from_array([3,9,20,None,None,15,7])) == [3.00,14.50,11.00]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6edc89e5",
+   "metadata": {},
+   "source": [
+    "Problem Link: https://leetcode.com/problems/all-nodes-distance-k-in-binary-tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f193894",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def distanceK(root: BinaryTreeNode, target: int, k: int) -> list[int]:\n",
+    "    adl: dict[int, set[int]] = dict()\n",
+    "    def createGraph(curr: BinaryTreeNode):\n",
+    "        nonlocal adl\n",
+    "        if curr:\n",
+    "            if curr.left:\n",
+    "                curr_neighbours = adl.get(curr.val, set())\n",
+    "                curr_neighbours.add(curr.left.val)\n",
+    "                adl[curr.val] = curr_neighbours\n",
+    "                left_neighbours = adl.get(curr.left.val, set())\n",
+    "                left_neighbours.add(curr.val)\n",
+    "                adl[curr.left.val] = left_neighbours\n",
+    "                createGraph(curr.left)\n",
+    "            if curr.right:\n",
+    "                curr_neighbours = adl.get(curr.val, set())\n",
+    "                curr_neighbours.add(curr.right.val)\n",
+    "                adl[curr.val] = curr_neighbours\n",
+    "                right_neighbours = adl.get(curr.right.val, set())\n",
+    "                right_neighbours.add(curr.val)\n",
+    "                adl[curr.right.val] = right_neighbours\n",
+    "                createGraph(curr.right)\n",
+    "\n",
+    "    # Create a graph out of the binary Tree\n",
+    "    createGraph(root)\n",
+    "\n",
+    "    # Starting from our target, find all nodes at K distance using BFS\n",
+    "    queue: list[int] = [target]\n",
+    "    visited: set[int] = set([target])\n",
+    "    while k > 0:\n",
+    "        next_: list[int] = []\n",
+    "        for curr in queue:\n",
+    "            for neighbour in adl.get(curr, set()):\n",
+    "                if neighbour not in visited:\n",
+    "                    visited.add(neighbour)\n",
+    "                    next_.append(neighbour)\n",
+    "        queue = next_\n",
+    "        k -= 1\n",
+    "\n",
+    "    return queue\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert sorted(distanceK(BinaryTreeNode.from_array([3,5,1,6,2,0,8,None,None,7,4]), 5, 2)) == [1, 4, 7]\n",
+    "assert sorted(distanceK(BinaryTreeNode.from_array([3,5,1,6,2,0,8,None,None,7,4]), 4, 2)) == [5, 7]"
    ]
   }
  ],
