--- a/study/striver-A2Z/10-trees.ipynb
+++ b/study/striver-A2Z/10-trees.ipynb
@@ -1806,6 +1806,7 @@
      "iopub.status.idle": "2024-04-10T11:14:41.900782Z",
      "shell.execute_reply": "2024-04-10T11:14:41.900021Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.020911,
      "end_time": "2024-04-10T11:14:41.902532",
@@ -1837,6 +1838,161 @@
     "# Testing the solution\n",
     "temp: BinaryTreeNode = BinaryTreeNode.from_array([3,5,1,6,2,0,8,None,None,7,4])\n",
     "assert lowestCommonAncestor(temp, p=temp.left, q=temp.left.right.right).val == 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8415d919",
+   "metadata": {},
+   "source": [
+    "Maximum width of a binary Tree\n",
+    "Video Link: https://youtu.be/ZbybYvcVLks?si=_r6ouO7uxfz3DI6I"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "249090c8",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Problem Link: https://leetcode.com/problems/maximum-width-of-binary-tree/submissions/1228981858\n",
+    "def widthOfBinaryTree(root: BinaryTreeNode) -> int:\n",
+    "    \"\"\"\n",
+    "    1. 0 Based indexing:\n",
+    "        - Left of any node: (2 * i + 1)\n",
+    "        - Right of any node: (2 * i + 2)\n",
+    "\n",
+    "    2. 1 Based indexing:\n",
+    "        - Left of any node: (2 * i)\n",
+    "        - Right of any node: (2 * i + 1)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    max_width: int = 0\n",
+    "    queue: list[tuple[BinaryTreeNode, int]] = [(root, 0)]\n",
+    "    while queue:\n",
+    "        max_width = max(max_width, queue[-1][1] - queue[0][1] + 1)\n",
+    "        next_: list[tuple[BinaryTreeNode, int]] = []\n",
+    "        min_idx = queue[0][1] # i - min_idx is done to prevent buffer overflow in languages like C, C++\n",
+    "        for curr, i in queue:\n",
+    "            if curr.left:\n",
+    "                next_.append((curr.left, 2 * (i - min_idx) + 1))\n",
+    "            if curr.right:\n",
+    "                next_.append((curr.right, 2 * (i - min_idx) + 2))\n",
+    "\n",
+    "        queue = next_\n",
+    "\n",
+    "    return max_width\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert widthOfBinaryTree(BinaryTreeNode.from_array([1,3,2,5,3,None,9])) == 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db8bdc78",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/fnmisPM6cVo?si=gK9Xm0WNZQ6dqBk6\n",
+    "Check children sum property in Binary Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9c463d9",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def isParentSum(curr: BinaryTreeNode) -> bool:\n",
+    "    if not curr or (not curr.left and not curr.right): # Leaf node\n",
+    "        return True\n",
+    "    else:\n",
+    "        curr_parent_sum = (curr.val == ((curr.left.val if curr.left else 0) + (curr.right.val if curr.right else 0)))\n",
+    "        return curr_parent_sum and isParentSum(curr.left) and isParentSum(curr.right)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isParentSum(BinaryTreeNode.from_array([5, 3, 2, 3, None, None, None, None, None])) == True\n",
+    "assert isParentSum(BinaryTreeNode.from_array([7, 3, 4, 3, None, 2, 3, None, None, None, None, None, None])) == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6315a3c1",
+   "metadata": {},
+   "source": [
+    "Maintain children sum property of a binary Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20d7e7dd",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def restoreChildrenSumProperty(root: BinaryTreeNode) -> BinaryTreeNode:\n",
+    "    \"In languages such as C, this might cause buffer overflow, see striver sol below\"\n",
+    "    max_ = 0\n",
+    "    def postOrder(curr: BinaryTreeNode) -> int:\n",
+    "        nonlocal max_\n",
+    "        max_ = max(max_, curr.val if curr else 0)\n",
+    "        if not curr.left and not curr.right:\n",
+    "            assert curr.val < max_, f\"Can only increment, {curr.val} cannot become {max_}\"\n",
+    "            curr.val = max_\n",
+    "            return curr.val\n",
+    "        else:\n",
+    "            left_ = postOrder(curr.left) if curr.left else 0\n",
+    "            right_ = postOrder(curr.right) if curr.right else 0\n",
+    "            assert curr.val < left_ + right_, f\"Can only increment, {curr.val} cannot become {left_ + right_}\"\n",
+    "            curr.val = left_ + right_\n",
+    "            return left_ + right_\n",
+    "\n",
+    "    postOrder(root)\n",
+    "    return root\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isParentSum(restoreChildrenSumProperty(BinaryTreeNode.from_array([2, 35, 10, 2, 3, 5, 2])))\n",
+    "assert isParentSum(restoreChildrenSumProperty(BinaryTreeNode.from_array([50, 7, 2, 3, 5, 1, 30])))\n",
+    "assert isParentSum(restoreChildrenSumProperty(BinaryTreeNode.from_array([7, 3, 4, 3, None, 2, 3, None, None, None, None, None, None])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf9f3b28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def restoreChildrenSumProperty_striver(root: BinaryTreeNode) -> BinaryTreeNode:\n",
+    "    def postOrder(curr: BinaryTreeNode) -> int:\n",
+    "        if not curr.left and not curr.right:\n",
+    "            return curr.val\n",
+    "        else:\n",
+    "            if curr.val > (curr.left.val if curr.left else 0) + (curr.right.val if curr.right else 0):\n",
+    "                if curr.left:\n",
+    "                    curr.left.val = curr.val\n",
+    "                if curr.right:\n",
+    "                    curr.right.val = curr.val\n",
+    "\n",
+    "            left = postOrder(curr.left) if curr.left else 0\n",
+    "            right = postOrder(curr.right) if curr.right else 0\n",
+    "            curr.val = left + right\n",
+    "            return curr.val\n",
+    "\n",
+    "    postOrder(root)\n",
+    "    return root\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isParentSum(restoreChildrenSumProperty_striver(BinaryTreeNode.from_array([2, 35, 10, 2, 3, 5, 2])))\n",
+    "assert isParentSum(restoreChildrenSumProperty_striver(BinaryTreeNode.from_array([50, 7, 2, 3, 5, 1, 30])))\n",
+    "assert isParentSum(restoreChildrenSumProperty_striver(BinaryTreeNode.from_array([7, 3, 4, 3, None, 2, 3, None, None, None, None, None, None])))"
    ]
   }
  ],
