Striver A2Z: Binary Trees - 10

--- a/study/striver-A2Z/10-trees.ipynb
+++ b/study/striver-A2Z/10-trees.ipynb
@@ -36,7 +36,8 @@
     "2. Diagnoal Traversal: Nodes of same diagnol are traversed one after another.\n",
     "\n",
     "##### Some properties of Binary Trees\n",
-    "- Max nodes at any level: 2 ** (N - 1)"
+    "- Max nodes at any level: 2 ** (N - 1)\n",
+    "Requirements to construct an unique binary tree: We must have the inorder traversal to know what comes to the left and to the right of root."
    ]
   },
   {
@@ -2043,6 +2044,7 @@
      "iopub.status.idle": "2024-04-11T17:11:50.175374Z",
      "shell.execute_reply": "2024-04-11T17:11:50.174716Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.023695,
      "end_time": "2024-04-11T17:11:50.177031",
@@ -2077,6 +2079,184 @@
     "assert isParentSum(restoreChildrenSumProperty_striver(BinaryTreeNode.from_array([2, 35, 10, 2, 3, 5, 2])))\n",
     "assert isParentSum(restoreChildrenSumProperty_striver(BinaryTreeNode.from_array([50, 7, 2, 3, 5, 1, 30])))\n",
     "assert isParentSum(restoreChildrenSumProperty_striver(BinaryTreeNode.from_array([7, 3, 4, 3, None, 2, 3, None, None, None, None, None, None])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d81de678",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/i9ORlEy6EsI?si=GlIarkkKAHDMEXss\n",
+    "Print all nodes at K distance from target in Binary Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af18ee1c",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def distanceK(root: BinaryTreeNode, target: int, k: int) -> list[int]:\n",
+    "    \"Time: O(N), Space: O(N)\"\n",
+    "    adl: dict[int, set[int]] = dict()\n",
+    "    def createGraph(curr: BinaryTreeNode):\n",
+    "        nonlocal adl\n",
+    "        if curr:\n",
+    "            curr_neighbours = adl.get(curr.val, set())\n",
+    "            if curr.left:\n",
+    "                curr_neighbours.add(curr.left.val)\n",
+    "                left_neighbours = adl.get(curr.left.val, set())\n",
+    "                left_neighbours.add(curr.val)\n",
+    "                adl[curr.left.val] = left_neighbours\n",
+    "                createGraph(curr.left)\n",
+    "            if curr.right:\n",
+    "                curr_neighbours.add(curr.right.val)\n",
+    "                right_neighbours = adl.get(curr.right.val, set())\n",
+    "                right_neighbours.add(curr.val)\n",
+    "                adl[curr.right.val] = right_neighbours\n",
+    "                createGraph(curr.right)\n",
+    "            adl[curr.val] = curr_neighbours\n",
+    "\n",
+    "    # Create a graph adjacency list\n",
+    "    createGraph(root)\n",
+    "\n",
+    "    # Do a BFS until distance is reached\n",
+    "    queue: list[int] = [target]\n",
+    "    visited: set[int] = set([target])\n",
+    "    while k > 0:\n",
+    "        next_: list[int] = []\n",
+    "        for curr in queue:\n",
+    "            for neighbour in adl.get(curr, set()):\n",
+    "                if neighbour not in visited:\n",
+    "                    visited.add(neighbour)\n",
+    "                    next_.append(neighbour)\n",
+    "\n",
+    "        queue = next_\n",
+    "        k -= 1\n",
+    "\n",
+    "    return queue\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert sorted(distanceK(BinaryTreeNode.from_array([3,5,1,6,2,0,8,None,None,7,4]), 5, 2)) == [1, 4, 7]\n",
+    "assert sorted(distanceK(BinaryTreeNode.from_array([3,5,1,6,2,0,8,None,None,7,4]), 4, 2)) == [5, 7]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db756dd0",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/2r5wLmQfD6g?si=V-Tirx2isc0Mt7Qp\n",
+    "Time to burn a Binary Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67ee9af0",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def timeToBurnTree(root: BinaryTreeNode, start: int):\n",
+    "    \"Time: O(N), Space: O(N)\"\n",
+    "    adl: dict[int, set[int]] = dict()\n",
+    "    def createGraph(curr: BinaryTreeNode):\n",
+    "        if curr:\n",
+    "            curr_neighbours = adl.get(curr.val, set())\n",
+    "            if curr.left:\n",
+    "                curr_neighbours.add(curr.left.val)\n",
+    "                adl[curr.left.val] = set([curr.val])\n",
+    "                createGraph(curr.left)\n",
+    "            if curr.right:\n",
+    "                curr_neighbours.add(curr.right.val)\n",
+    "                adl[curr.right.val] = set([curr.val])\n",
+    "                createGraph(curr.right)\n",
+    "            adl[curr.val] = curr_neighbours\n",
+    "\n",
+    "    # Create an adjacency list\n",
+    "    createGraph(root)\n",
+    "\n",
+    "    # Do a BFS traversal and compute the max levels\n",
+    "    k = 0\n",
+    "    queue: list[int] = [start]\n",
+    "    visited: set[int] = set([start])\n",
+    "    while queue:\n",
+    "        next_: list[int] = []\n",
+    "        for curr in queue:\n",
+    "            for neighbour in adl.get(curr, set()):\n",
+    "                if neighbour not in visited:\n",
+    "                    visited.add(neighbour)\n",
+    "                    next_.append(neighbour)\n",
+    "\n",
+    "        queue = next_\n",
+    "        k += 1\n",
+    "\n",
+    "    return k - 1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert timeToBurnTree(BinaryTreeNode.from_array([3,5,1,6,2,0,8,None,None,7,4]), 5) == 3\n",
+    "assert timeToBurnTree(BinaryTreeNode.from_array([3,5,1,6,2,0,8,None,None,7,4]), 4) == 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4e4fad8",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/u-yWemKGWO0?si=-xcOq69rKzHwnkSC\n",
+    "Count total nodes in a complete Binary Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd5cd4ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Problem Link: https://leetcode.com/problems/count-complete-tree-nodes/submissions/1229957492\n",
+    "def countNodes(root: BinaryTreeNode) -> int:\n",
+    "    \"\"\"\n",
+    "    For each node, compute the left height and right height\n",
+    "    If left height == right height:\n",
+    "        Count nodes with formula = 2 ^ (h - 1)\n",
+    "    Else:\n",
+    "        Count of nodes = 1 + left_count + right_count\n",
+    "\n",
+    "    Computing height takes O(log N) time. At each step, either left would be a\n",
+    "    full binary tree or the right would be: O(log N) nodes to travel\n",
+    "\n",
+    "    Time: O(log N * log N), Space: O(log N)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    if not root:\n",
+    "        return 0\n",
+    "\n",
+    "    # Compute left height\n",
+    "    curr, lh = root, 0\n",
+    "    while curr:\n",
+    "        curr = curr.left\n",
+    "        lh += 1\n",
+    "\n",
+    "    # Compute right height\n",
+    "    curr, rh = root, 0\n",
+    "    rh = 0\n",
+    "    while curr:\n",
+    "        curr = curr.right\n",
+    "        rh += 1\n",
+    "\n",
+    "    if lh == rh:\n",
+    "        return 2 ** lh - 1\n",
+    "    else:\n",
+    "        return 1 + countNodes(root.left) + countNodes(root.right)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert countNodes(BinaryTreeNode.from_array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11])) == 11"
    ]
   }
  ],
