--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -2087,6 +2087,7 @@
      "iopub.status.idle": "2024-04-11T17:11:46.338236Z",
      "shell.execute_reply": "2024-04-11T17:11:46.337531Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.027832,
      "end_time": "2024-04-11T17:11:46.340035",
@@ -2141,6 +2142,86 @@
     "# Testing the solution\n",
     "assert sorted(distanceK(BinaryTreeNode.from_array([3,5,1,6,2,0,8,None,None,7,4]), 5, 2)) == [1, 4, 7]\n",
     "assert sorted(distanceK(BinaryTreeNode.from_array([3,5,1,6,2,0,8,None,None,7,4]), 4, 2)) == [5, 7]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29877a02",
+   "metadata": {},
+   "source": [
+    "Construct BT from Preorder and Inorder\n",
+    "Problem Link: https://leetcode.com/problems/construct-binary-tree-from-preorder-and-inorder-traversal/submissions/1230345366"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7042888b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def buildTreeFromPreOrder(inorder: list[int], preorder: list[int]) -> BinaryTreeNode|None:\n",
+    "    \"\"\"\n",
+    "    Preorder: Root, Left, Right\n",
+    "    Inorder: Left, Root, Right\n",
+    "\n",
+    "    Root based spliting.\n",
+    "    Use Preorder to determine which of the bunch is the root.\n",
+    "    Use inorder to determine which of the bunch goes to the left half and which right.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    if not inorder:\n",
+    "        return None\n",
+    "    else:\n",
+    "        inorder_set = set(inorder)\n",
+    "        for root_val in preorder:\n",
+    "            if root_val in inorder_set:\n",
+    "                break\n",
+    "\n",
+    "        root = BinaryTreeNode(root_val)\n",
+    "        if len(inorder) > 1:\n",
+    "            idx = inorder.index(root.val)\n",
+    "            left_inorder = inorder[:idx]\n",
+    "            root.left = buildTreeFromPreOrder(left_inorder, preorder)\n",
+    "            right_inorder = inorder[idx + 1:]\n",
+    "            root.right = buildTreeFromPreOrder(right_inorder, preorder)\n",
+    "\n",
+    "        return root\n",
+    "\n",
+    "# Testing the Solution\n",
+    "buildTreeFromPreOrder(inorder=[9,15,20,7], preorder=[3,9,20,15,7]).to_list()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2325a371",
+   "metadata": {},
+   "source": [
+    "Construct Binary Tree from Inorder and Postorder Traversal\n",
+    "Problem Link: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3a41642",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def buildTreeFromPostOrder(inorder: list[int], postorder: list[int]) -> BinaryTreeNode|None:\n",
+    "    \"\"\"\n",
+    "    Inorder: Root, Left, Right\n",
+    "    Postorder: Left, Right, Root\n",
+    "\n",
+    "    Same as FromPreOrder, except that we always take the last element also present in inorder as our root.\n",
+    "    Simply reverse postorder and use the same function as before.\n",
+    "    \"\"\"\n",
+    "    return buildTreeFromPreOrder(inorder=inorder, preorder=postorder[::-1])\n",
+    "\n",
+    "# Testing the Solution\n",
+    "buildTreeFromPostOrder(inorder=[3, 2, 4, 1, 5], postorder=[3, 4, 2, 5, 1]).to_list()"
    ]
   }
  ],
