Striver A2Z: Binary Trees - 11, misc
Commit also removes .gitkeep from 'practice' directory
LC biweekly contest

--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -2257,6 +2257,7 @@
      "iopub.status.idle": "2024-04-12T13:44:26.845948Z",
      "shell.execute_reply": "2024-04-12T13:44:26.844807Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.040758,
      "end_time": "2024-04-12T13:44:26.847825",
@@ -2291,6 +2292,283 @@
     "\n",
     "# Testing the Solution\n",
     "buildTreeFromPostOrder(inorder=[3, 2, 4, 1, 5], postorder=[3, 4, 2, 5, 1]).to_list()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e008839",
+   "metadata": {},
+   "source": [
+    "Medium Leetcode: https://leetcode.com/problems/remove-k-digits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf7ab669",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Brute force solution\n",
+    "def removeKdigitsBrute(num: str, k: int) -> str:\n",
+    "    def removeDigit(curr: str) -> str:\n",
+    "        N = len(curr)\n",
+    "        for i in range(N):\n",
+    "            if i == N - 1 or num[i] > num[i + 1]:\n",
+    "                break\n",
+    "\n",
+    "        return num[:i] + num[i + 1:]\n",
+    "\n",
+    "    while k > 0:\n",
+    "        num = removeDigit(num)\n",
+    "        k -= 1\n",
+    "\n",
+    "    num = num.lstrip(\"0\")\n",
+    "    return \"0\" if not len(num) else num\n",
+    "\n",
+    "# Testing the solution\n",
+    "removeKdigitsBrute(\"1432219\", 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b073a96f",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Optimal solution after trial and errors: https://leetcode.com/problems/remove-k-digits/submissions/1231175827 \n",
+    "def removeKdigitsBetter(num: str, k: int) -> str:\n",
+    "    \"Time: O(N), Space: O(N)\"\n",
+    "    stack: list[str] = []\n",
+    "    for n in num:\n",
+    "        while stack and k > 0 and int(stack[-1]) > int(n):\n",
+    "            stack.pop()\n",
+    "            k -= 1\n",
+    "        stack.append(n)\n",
+    "\n",
+    "    stack = stack[:-k] if k > 0 else stack\n",
+    "    num = \"\".join(stack).lstrip(\"0\")\n",
+    "    num = num if num else \"0\"\n",
+    "    return num\n",
+    "\n",
+    "# Testing the solution\n",
+    "for _ in tqdm.tqdm(range(1000)):\n",
+    "    N = random.randint(1, 25)\n",
+    "    i = random.randint(1, N)\n",
+    "    str_ = \"\".join(random.choices(\"0123456789\", k=N))\n",
+    "    assert removeKdigitsBetter(str_, i) == removeKdigitsBrute(str_, i), f\"failed for {str_}, {i}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48a18c10",
+   "metadata": {},
+   "source": [
+    "Leetcode Weekly contest - Saturday (13th Apr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07cf645f",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q1 - Easy\n",
+    "def scoreOfString(s: str) -> int:\n",
+    "    N = len(s)\n",
+    "    result = 0\n",
+    "    for i in range(N - 1):\n",
+    "        result += abs(ord(s[i]) - ord(s[i + 1]))\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3360d184",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q2 - Medium\n",
+    "def minRectanglesToCoverPoints(points: list[list[int]], w: int) -> int:\n",
+    "    X = sorted(set(map(lambda x: x[0], points)))\n",
+    "    count = 0\n",
+    "    prev = -1\n",
+    "    for x in X:\n",
+    "        if prev == -1 or x - prev > w:\n",
+    "            count += 1\n",
+    "            prev = x\n",
+    "\n",
+    "    return count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minRectanglesToCoverPoints([[0,0],[1,1],[2,2],[3,3],[4,4],[5,5],[6,6]], 2) == 3\n",
+    "assert minRectanglesToCoverPoints([[2,3],[1,2]], 0) == 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91647588",
+   "metadata": {},
+   "source": [
+    "Binary Watch - Easy LC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3868d381",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/binary-watch/submissions/1231377431\n",
+    "def readBinaryWatch(turnedOn: int) -> list[str]:\n",
+    "    def getValue(code: str) -> tuple[int, int]:\n",
+    "        mapping = {\n",
+    "            \"H8\": (8, 0), \"H4\": (4, 0),\n",
+    "            \"H2\": (2, 0), \"H1\": (1, 0),\n",
+    "\n",
+    "            \"M32\": (0, 32), \"M16\": (0, 16),\n",
+    "            \"M8\": (0, 8), \"M4\": (0, 4),\n",
+    "            \"M2\": (0, 2), \"M1\": (0, 1)\n",
+    "        }\n",
+    "        return mapping[code]\n",
+    "\n",
+    "    leds: list[str] = [\"H8\", \"H4\", \"H2\", \"H1\", \"M32\", \"M16\", \"M8\", \"M4\", \"M2\", \"M1\"]\n",
+    "    possbilities = itertools.combinations(leds, r=turnedOn)\n",
+    "\n",
+    "    result: list[str] = []\n",
+    "    for possb in possbilities:\n",
+    "        hour_ = min_ = 0\n",
+    "        for led in possb:\n",
+    "            H, M = getValue(led)\n",
+    "            hour_ += H\n",
+    "            min_ += M\n",
+    "\n",
+    "        if 0 <= hour_ <= 11 and 0 <= min_ <= 59:\n",
+    "            result.append(f\"{hour_}:{str(min_).zfill(2)}\")\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "readBinaryWatch(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b69d7ad",
+   "metadata": {},
+   "source": [
+    "Valid Perfect Square: https://leetcode.com/problems/valid-perfect-square/submissions/1231389059"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97e2b8db",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def isPerfectSquare(num: int) -> bool:\n",
+    "    low, high = 0, num\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        square = mid * mid\n",
+    "        if square == num:\n",
+    "            return True\n",
+    "        elif square < num:\n",
+    "            low = mid + 1\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "\n",
+    "    return False\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isPerfectSquare(16) == True\n",
+    "assert isPerfectSquare(3) == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54962282",
+   "metadata": {},
+   "source": [
+    "Range sum query: https://leetcode.com/problems/range-sum-query-immutable/submissions/1231398800"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c95f87dd",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "class NumArray:\n",
+    "    def __init__(self, nums: list[int]):\n",
+    "        self.nums = nums\n",
+    "        self.cumsum = list(itertools.accumulate(nums, lambda x, y: x + y))\n",
+    "\n",
+    "    def sumRange(self, left: int, right: int) -> int:\n",
+    "        result = self.cumsum[right]\n",
+    "        if left > 0:\n",
+    "            result -= self.cumsum[left - 1]\n",
+    "        return result\n",
+    "\n",
+    "# Testing the Solution\n",
+    "obj = NumArray([-2, 0, 3, -5, 2, -1])\n",
+    "assert obj.sumRange(0, 2) == 1\n",
+    "assert obj.sumRange(2, 5) == -1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd8e8248",
+   "metadata": {},
+   "source": [
+    "Cows and bulls: https://leetcode.com/problems/bulls-and-cows/submissions/1231417724"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "264c9ee0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getHint(secret: str, guess: str) -> str:\n",
+    "    N = len(guess)\n",
+    "    secret_freq = collections.Counter(secret)\n",
+    "    guess_freq = collections.Counter(guess)\n",
+    "    cows = bulls = 0\n",
+    "    for i in range(N):\n",
+    "        if guess[i] == secret[i]:\n",
+    "            bulls += 1\n",
+    "            secret_freq[guess[i]] -= 1\n",
+    "            guess_freq[guess[i]] -= 1\n",
+    "\n",
+    "    for k in guess_freq:\n",
+    "        cows += min(guess_freq[k], secret_freq.get(k, 0))\n",
+    "\n",
+    "    return f\"{bulls}A{cows}B\"\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert getHint(\"1122\", \"1222\") == \"3A0B\""
    ]
   }
  ],
