--- a/study/striver-A2Z/10-trees.ipynb
+++ b/study/striver-A2Z/10-trees.ipynb
@@ -2278,6 +2278,7 @@
      "iopub.status.idle": "2024-04-12T01:54:32.312300Z",
      "shell.execute_reply": "2024-04-12T01:54:32.311576Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.022909,
      "end_time": "2024-04-12T01:54:32.313987",
@@ -2327,6 +2328,265 @@
     "\n",
     "# Testing the solution\n",
     "assert countNodes(BinaryTreeNode.from_array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11])) == 11"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51889e6d",
+   "metadata": {},
+   "source": [
+    "Construct binary tree from preorder and inorder traversal\n",
+    "Video Link: https://youtu.be/aZNaLrVebKQ?si=bSe8CP3Bxk0bM3nG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62f3bcad",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Better solution\n",
+    "# Problem Link: https://leetcode.com/problems/construct-binary-tree-from-preorder-and-inorder-traversal/submissions/1230758214\n",
+    "def buildTreeFromPreorderBetter(preorder: list[int], inorder: list[int]) -> BinaryTreeNode|None:\n",
+    "    \"\"\"\n",
+    "    Preorder can be used to figure out the root.\n",
+    "    Inorder can be used to figure out which of the nodes come to left and to the right of root.\n",
+    "    \"\"\"\n",
+    "    root = BinaryTreeNode(preorder[0]) if preorder else None\n",
+    "    if root and len(inorder) > 1:\n",
+    "        idx = inorder.index(root.val)\n",
+    "        root.left = buildTreeFromPreorderBetter(preorder[1: idx + 1], inorder[:idx])\n",
+    "        root.right = buildTreeFromPreorderBetter(preorder[idx + 1:], inorder[idx + 1:])\n",
+    "\n",
+    "    return root\n",
+    "\n",
+    "# Testing the Solution\n",
+    "buildTreeFromPreorderBetter(inorder=[40, 20, 50, 10, 60, 30], preorder=[10, 20, 40, 50, 30, 60]).to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "878e7fa6",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/construct-binary-tree-from-preorder-and-inorder-traversal/submissions/1230767142/\n",
+    "def buildTreeFromPreorderOptimal(preorder: list[int], inorder: list[int]) -> BinaryTreeNode|None:\n",
+    "    \"\"\"\n",
+    "    Use hashmap to save the idx positions of inorder.\n",
+    "    Time: O(N), Space: O(N)\n",
+    "    \"\"\"\n",
+    "    N = len(preorder)\n",
+    "    inorder_hm = dict()\n",
+    "    for i, n in enumerate(inorder):\n",
+    "        inorder_hm[n] = i\n",
+    "\n",
+    "    def helper(inorder_start: int, inorder_end: int, preorder_start: int, preorder_end: int) -> BinaryTreeNode|None:\n",
+    "        N_ = preorder_end - preorder_start\n",
+    "        root = BinaryTreeNode(preorder[preorder_start]) if N_ >= 0 else None\n",
+    "        if root and N_ > 0:\n",
+    "            idx = inorder_hm[root.val]\n",
+    "            root.left = helper(inorder_start, idx - 1, preorder_start + 1, preorder_start + idx - inorder_start)\n",
+    "            root.right = helper(idx + 1, inorder_end, preorder_start + 1 + idx - inorder_start, preorder_end)\n",
+    "\n",
+    "        return root\n",
+    "\n",
+    "    return helper(0, N - 1, 0, N - 1)\n",
+    "\n",
+    "# Testing the Solution\n",
+    "buildTreeFromPreorderOptimal(inorder=[40, 20, 50, 10, 60, 30], preorder=[10, 20, 40, 50, 30, 60]).to_list()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0d37bdc",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/LgLRTaEMRVc?si=AuIS8bfI3SLknUaS\n",
+    "Binary Tree from Postorder and Inorder traversal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53e42711",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Better: https://leetcode.com/problems/construct-binary-tree-from-inorder-and-postorder-traversal/submissions/1230771756/\n",
+    "def buildTreeFromPostorderBetter(inorder: list[int], postorder: list[int]) -> BinaryTreeNode|None:\n",
+    "    \"\"\"\n",
+    "    Same logic as previous question, we could technically call buildTreeFromPreorder(inorder, postorder[::-1]).\n",
+    "    Instead of assigning first value as root, here we assign last value as root and backtrack.\n",
+    "    \"\"\"\n",
+    "    root = BinaryTreeNode(postorder[-1]) if postorder else None\n",
+    "    if root and len(postorder) > 1:\n",
+    "        idx = inorder.index(root.val)\n",
+    "        root.left = buildTreeFromPostorderBetter(inorder[:idx], postorder[:idx])\n",
+    "        root.right = buildTreeFromPostorderBetter(inorder[idx + 1:], postorder[idx: -1])\n",
+    "\n",
+    "    return root\n",
+    "\n",
+    "# Testing the Solution\n",
+    "buildTreeFromPostorderBetter(inorder=[3, 2, 4, 1, 5], postorder=[3, 4, 2, 5, 1]).to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f83f35a",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Optimal: https://leetcode.com/problems/construct-binary-tree-from-inorder-and-postorder-traversal/submissions/1230778263/\n",
+    "def buildTreeFromPostorderOptimal(inorder: list[int], postorder: list[int]) -> BinaryTreeNode|None:\n",
+    "    \"\"\"\n",
+    "    Same logic as above, use a hashmap to precompute the indices for inorder.\n",
+    "    \"\"\"\n",
+    "    N = len(inorder)\n",
+    "    hm: dict[int, int] = dict()\n",
+    "    for i, n in enumerate(inorder):\n",
+    "        hm[n] = i\n",
+    "\n",
+    "    def helper(iStart: int, iEnd: int, pStart, pEnd: int) -> BinaryTreeNode|None:\n",
+    "        root = BinaryTreeNode(postorder[pEnd]) if pStart <= pEnd else None\n",
+    "        if root and pStart < pEnd:\n",
+    "            idx = hm[root.val]\n",
+    "            root.left = helper(iStart, idx - 1, pStart, pStart + idx - iStart - 1)\n",
+    "            root.right = helper(idx + 1, iEnd, pStart + idx - iStart, pEnd - 1)\n",
+    "        return root\n",
+    "\n",
+    "    return helper(0, N - 1, 0, N - 1)\n",
+    "\n",
+    "# Testing the solution\n",
+    "buildTreeFromPostorderOptimal(inorder=[3, 2, 4, 1, 5], postorder=[3, 4, 2, 5, 1]).to_list()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a30f23a",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/-YbXySKJsX8?si=GF9GnCHLV1gDfcWK\n",
+    "Serialize and Deserialize Binary Trees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b286bec0",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/serialize-and-deserialize-binary-tree/submissions/1230819565\n",
+    "class Codec:\n",
+    "    def serialize(self, root: BinaryTreeNode) -> str:\n",
+    "        \"\"\"Encodes a tree to a single string.\"\"\"\n",
+    "        def helper(curr: BinaryTreeNode) -> str:\n",
+    "            if not curr:\n",
+    "                return \"*\"\n",
+    "            else:\n",
+    "                return f\"{curr.val}({helper(curr.left)},{helper(curr.right)})\"\n",
+    "\n",
+    "        result = helper(root)\n",
+    "        return result\n",
+    "\n",
+    "    def deserialize(self, data: str) -> BinaryTreeNode|None:\n",
+    "        \"\"\"Decodes your encoded data to tree.\"\"\"\n",
+    "        def createTree(prev: BinaryTreeNode|str|None) -> BinaryTreeNode|None:\n",
+    "            if type(prev) == str:\n",
+    "                return BinaryTreeNode(int(prev)) if prev.isdigit() or prev[0] == '-' else None\n",
+    "            else:\n",
+    "                return prev # type: ignore\n",
+    "\n",
+    "        stack: list[str|None|BinaryTreeNode] = []\n",
+    "        for ch in data:\n",
+    "            if ch.isdigit() and stack and type(stack[-1]) == str and (stack[-1].isdigit() or stack[-1][0] == '-'):\n",
+    "                stack[-1] += ch\n",
+    "            else:\n",
+    "                stack.append(ch)\n",
+    "                if ch == ')':\n",
+    "                    stack.pop() # )\n",
+    "                    right = createTree(stack.pop())\n",
+    "                    stack.pop() # ,\n",
+    "                    left = createTree(stack.pop())\n",
+    "                    stack.pop() # (\n",
+    "                    root = createTree(stack.pop())\n",
+    "                    if root:\n",
+    "                        root.left = left\n",
+    "                        root.right = right\n",
+    "                    stack.append(root)\n",
+    "\n",
+    "        return stack[0] if type(stack[0]) != str else None\n",
+    "\n",
+    "# Your Codec object will be instantiated and called as such:\n",
+    "ser = Codec()\n",
+    "out = ser.deserialize(ser.serialize(BinaryTreeNode.from_array([1,2,-13,None,None,4,25])))\n",
+    "out_lst = out.to_list() if out is not None else []\n",
+    "while out_lst and out_lst[-1] is None: out_lst.pop()\n",
+    "assert out_lst == [1,2,-13,None,None,4,25]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec2dd2db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Problem link: https://leetcode.com/problems/serialize-and-deserialize-binary-tree/submissions/1231115438/\n",
+    "class CodecStriver:\n",
+    "    def serialize(self, root: BinaryTreeNode) -> str:\n",
+    "        all_nodes: list[str] = []\n",
+    "        queue: list[BinaryTreeNode] = [root]\n",
+    "        while queue:\n",
+    "            next_: list[BinaryTreeNode] = []\n",
+    "            for curr in queue:\n",
+    "                all_nodes.append(str(curr.val) if curr else '*')\n",
+    "                if curr:\n",
+    "                    next_.append(curr.left)\n",
+    "                    next_.append(curr.right)\n",
+    "\n",
+    "            queue = next_\n",
+    "\n",
+    "        return ','.join(all_nodes)\n",
+    "\n",
+    "    def deserialize(self, data: str) -> BinaryTreeNode|None:\n",
+    "        all_nodes: list[BinaryTreeNode] = []\n",
+    "        idx: float = -1\n",
+    "        for curr_val in data.split(','):\n",
+    "            curr = BinaryTreeNode(int(curr_val)) if curr_val != '*' else None\n",
+    "            if curr:\n",
+    "                all_nodes.append(curr)\n",
+    "            if idx == -1:\n",
+    "                idx += 1\n",
+    "            elif int(idx) == idx:\n",
+    "                all_nodes[int(idx)].left = curr\n",
+    "                idx += 0.5\n",
+    "            else:\n",
+    "                all_nodes[int(idx)].right = curr\n",
+    "                idx += 0.5\n",
+    "\n",
+    "        return all_nodes[0] if all_nodes else None\n",
+    "\n",
+    "# Your Codec object will be instantiated and called as such:\n",
+    "ser_ = CodecStriver()\n",
+    "out = ser_.deserialize(ser_.serialize(BinaryTreeNode.from_array([1,2,-13,None,None,4,25])))\n",
+    "out_lst = out.to_list() if out is not None else []\n",
+    "while out_lst and out_lst[-1] is None: out_lst.pop()\n",
+    "assert out_lst == [1,2,-13,None,None,4,25]"
    ]
   }
  ],
